2013-11-25  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* soap-inspect.el: use `soap-make-wsdl` to construct the object
	for registering the soap-inspect method.

	Make debbugs tests pass

	* soap-client.el (soap-decode-any-type): use soap-l2fq on the type
	name, also skip string only nodes when decoding a structure.


2013-11-23  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el (soap-should-encode-value-for-xs-element): new
	function
	(soap-encode-xs-element): don't encode nil value unless needed

2013-11-17  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* soap-client.el (soap-bound-operation): new slot `soap-body`
	(soap-parse-binding): parse the message parts required in the body
	(soap-encode-body): encode only the parts that are declared to be
	part of the body

2013-11-15  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* soap-client.el (soap-encode-xs-element): use the fq name when
	writing out the tag.
	(soap-encode-body): remove hack that inserts the xmlns in the
	element attributes list.

2013-11-14  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* soap-client.el (soap-xs-attribute): add "default" slot
	(soap-xs-parse-attribute): default slot is set from the XML
	"fixed" attribute.
	(soap-encode-xs-complex-type-attributes): encode any attributes
	that have a default value.  Also, don't put the xsi:nil attribute
	when the complex type has no content anyway.

2013-11-04  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* soap-client.el (soap-well-known-xmlns): add the xml namespace
	(soap-local-xmlns): start with the xml namespace
	(soap-xml-node-first-child): skip xsd:annotation nodes too
	(soap-make-xs-basic-types): more xsd types added
	(soap-encode-xs-basic-type, soap-decode-xs-basic-type): handle
	"language", "time", "date", "nonNegativeInteger"
	(soap-resolve-references-for-xs-element): don't signal an error if
	the element does not have a type.
	(soap-xs-parse-simple-type): subtypes are handled with ecase,
	added stum for xsd:list